z-index fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
 /* *{
   position: relative;
 } */
-/* *{
+*{
   z-index: 1;
 }
 Image, img{
@@ -26,7 +26,7 @@ Image, img{
 }
 h1{
   z-index: 10;
-} */
+}
 html {
   background-color: var(--theme-color);
   color: var(--text-color); /* Set the default text color */
